--- a/style.css
+++ b/style.css
@@ -53,11 +53,8 @@ body{
     }
 
     .listak.html{
-        background-color: #04AA6D;
+      background-color: olive;
     }
 
 }
 
-.listak.html{
-  background-color: #04AA6D;
-}
