--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ a{
 body {
   margin: 0;
   font-family: 'Luxurious Roman', cursive;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .sidebar {
