--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Neonderthaw&family=Yanone+Kaffeesatz:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&family=Neonderthaw&family=Yanone+Kaffeesatz:wght@200&display=swap');
 
 body{
     margin: 0;
-    font-family: 'Yanone Kaffeesatz', sans-serif;  }
+    font-family: 'Inconsolata', monospace;
+    }
   
   .sidebar {
     margin: 0;
